[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm"
version = "0.2.0"
authors = [{ name = "Yanfeng Lu" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.9.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    # "flash-attn",
    "xxhash",
    "modelscope",
    "rich>=14.3.1",
]

[project.urls]
Homepage="https://github.com/yanfeng98/fork-nano-vllm"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanovllm*"]
